<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/text_login"
        android:layout_width="32dp"
        android:layout_height="22dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_login"
        android:textColor="#FF477BEF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:inputType="phone"
        android:imeOptions="actionNext"
        android:hint="@string/input_telephone"
        android:paddingTop="0dp"
        android:paddingBottom="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/input_password"
        android:paddingTop="0dp"
        android:background="@drawable/edit_background"
        android:textCursorDrawable="@drawable/bg_cursor"
        android:textSize="16sp"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:paddingBottom="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_telephone" />

    <CheckBox
        android:id="@+id/cbEat"
        style="@style/Widget.AppCompat.CompoundButton.RadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:padding="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <ScrollView
        android:id="@+id/scroll_text"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="0dp"
        app:layout_constraintStart_toEndOf="@+id/cbEat"
        app:layout_constraintTop_toBottomOf="@+id/editText2">

        <TextView
            android:id="@+id/deal_front"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="0dp"
            android:text="@string/deal_front"
            android:textColor="#FFA1A6B3"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cbEat"
            tools:layout_editor_absoluteY="284dp" />

    </ScrollView>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#FFA1A6B3"
        android:stateListAnimator="@null"
        android:text="@string/btn_register"
        android:textColor="#FF333333"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_text" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/note"
        android:textColor="#FFA1A6B3"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <TextView
        android:id="@+id/more_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/more_register"
        android:textColor="#FFA1A6B3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <TextView
        android:id="@+id/release_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="16dp"
        android:text="@string/release_number"
        android:textColor="#FFA1A6B3"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/more_register"
        app:layout_constraintStart_toEndOf="@+id/note" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mistake" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/welcome" />

</androidx.constraintlayout.widget.ConstraintLayout>