<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/text_login"
        android:layout_width="32dp"
        android:layout_height="22dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_login"
        android:textColor="#FF477BEF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_close" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@drawable/line_et_bg"
            android:hint="@string/input_telephone"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="20"
            android:paddingTop="0dp"
            android:paddingBottom="18dp"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_username"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_edittext_clean" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="16dp"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_username">

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@drawable/line_et_bg"
            android:hint="@string/input_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingTop="0dp"
            android:paddingBottom="18dp"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_password"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginBottom="27dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_edittext_clean" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <CheckBox
        android:id="@+id/cb_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:button="@drawable/checkbox_img"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/deal_after"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/deal_after" />

    <TextView
        android:id="@+id/deal_after"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:focusable="false"
        android:text="@string/deal_front"
        android:textColor="#FFA1A6B3"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/cb_register"
        app:layout_constraintTop_toBottomOf="@+id/frame_password" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_selector"
        android:stateListAnimator="@null"
        android:text="@string/btn_register"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deal_after" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/note"
        android:textColor="#FFA1A6B3"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <TextView
        android:id="@+id/more_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/more_register"
        android:textColor="#FFA1A6B3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <TextView
        android:id="@+id/release_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/release_number"
        android:textColor="#FFA1A6B3"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/image_close"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mistake" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="42dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_close"
        app:srcCompat="@drawable/welcome" />

</androidx.constraintlayout.widget.ConstraintLayout>